Desafios-Kubernetes/pacman/app/pacman.yml

--- # pacman deployment 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment
  namespace: grupo3
  labels:
    app: pacman-deployment
spec:
  revisionHistoryLimit: 5 #default 10
  strategy:
    type: RollingUpdate #default Recreate
  replicas: 2
  selector:
    matchLabels:
      app: pacman-deployment
  template:
    metadata:
      labels:
        app: pacman-deployment
    spec:
      containers:
      - name: pacman-deployment
        image: roxsross12/pacman:1.0.1
        ports:
        - containerPort: 8080
