Desafios-Kubernetes/pacman/app/serviceapp.yml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: grupo3
spec:
  selector:
    app: pacman-deployment
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
