Desafios-Kubernetes/pacman/app/ingressapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: grupo3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: grupo3.295devops.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pacman-service
              port:
                number: 80
